Normalisation du nom du site en TinyGrm (au lieu de TinyInsta) comme utilisé dans le Readme.md

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html id="PAGE" lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>TinyInsta</title>
+    <title>TinyGram</title>
 
     <!-- Google login -->
     <meta name="google-signin-scope" content="profile email">
@@ -204,7 +204,7 @@
                             m('div', {class:'navbar-brand'}, [
 
                                 // Title
-                                m('h1', {class:'navbar-item title', style:'margin-top:auto; margin-bottom:auto'}, "TinyInsta"),
+                                m('h1', {class:'navbar-item title', style:'margin-top:auto; margin-bottom:auto'}, "TinyGram"),
 
                                 // Profil image
                                 m('img', {
@@ -552,7 +552,7 @@
                     m('header', {class:'navbar'}, [
                         m('div', {class:'container'}, [
                             m('div', {class:'navbar-brand'}, [
-                                m('h1', {class:'navbar-item title', style:'margin-top:auto; margin-bottom:auto'}, "TinyInsta"),
+                                m('h1', {class:'navbar-item title', style:'margin-top:auto; margin-bottom:auto'}, "TinyGram"),
                                 m('div', {
                                     class:'navbar-item g-signin2',
                                     style:'margin-top:auto; margin-bottom:auto',
@@ -566,7 +566,7 @@
                 m('div', {class:'hero-body'}, [
                     m('div', {class:'container has-text-centered'}, [
                         m('h1', {class:'title', style:'width:50%; margin-left:auto; margin-right:auto'}, [
-                            m('p', "Pour utiliser TinyInsta il est nécessaire de se connecter avec son compte Google."),
+                            m('p', "Pour utiliser TinyGram il est nécessaire de se connecter avec son compte Google."),
                             m('p', "Si le bouton de connexion n'apparait pas, veuillez recharger la page.")
                         ])
                     ]),
